<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prcp_parking_ransac_lidar</name>
  <version>0.1.0</version>
  <description>ROS2 package for detecting parking spaces from LiDAR pointclouds</description>
  <maintainer email="zahuczki.zoltan@ga.sze.hu">Zoltan Zahuczki @ JKK</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE v3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>